[package]
name = "hibiki"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "hibiki"
path = "src/server.rs"

[dependencies]
uplc = { git = "https://github.com/aiken-lang/aiken.git", rev = "49bd4ba33d9fd99180cd77321ad799e19f23c6ba", default-features = false}
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.39.3", features = ["full"] }
cryptoxide = "0.4.2"
serde = "1.0.195"
serde_json = "1.0.111"
dotenv = "0.15.0"
async-trait = "0.1.79"
maestro-rust-sdk = "1.1.3"
reqwest = "0.12.3"
# whisky = "1.0.6"
whisky-macros = { path = "../../../sidan/whisky/packages/whisky-macros", default-features = false }
whisky-common = { path = "../../../sidan/whisky/packages/whisky-common" }
whisky = { path = "../../../sidan/whisky/packages/whisky" }
# grpc_proto = { git = "https://github.com/deltadefi-protocol/deltadefi-schema.git", tag="v1.1.79" }
hibiki-proto = { path = "../deltadefi-schema/proto/hibiki"}

[build-dependencies]
tonic-build = "0.10"
