[package]
name = "hibiki"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "hibiki"
path = "src/server.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.39.3", features = ["full"] }
serde_json = "1.0.111"
dotenv = "0.15.0"
async-trait = "0.1.79"
# whisky = "1.0.21"
whisky = { path = "../../../sidan/whisky/packages/whisky" }
# hibiki-proto = { git = "https://github.com/deltadefi-protocol/deltadefi-schema.git", tag = "v1.4.4-beta-5", dir = "proto/hibiki" }
hibiki-proto = { path = "../deltadefi-schema/proto/hibiki"}
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.21.5"
gouth = "0.2.1"
# Prometheus metrics
prometheus = "0.13"
lazy_static = "1.4"
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
tower = "0.4"
chrono = "0.4"
futures = "0.3"
blake2 = "0.10"
hex = "0.4"

[build-dependencies]
tonic-build = "0.10"
